--- a/css/estiloak.css
+++ b/css/estiloak.css
@@ -1,5 +1,6 @@
 .flex-container {
     display: flex;
+    min-height: 300px;
 }
 
 .flex {
@@ -23,8 +24,9 @@
     flex: 0.75;
     background-color: white;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    padding-top: 30px;
+    align-items: left;
+    justify-content: left;
 } 
 
 .input {
@@ -48,4 +50,9 @@ label {
 
 .sarrerak {
     margin-bottom: 20px;
+}
+
+.oina {
+    margin-top: 20px;
+    text-align: right;
 }
